--- a/package.json
+++ b/package.json
@@ -1,37 +1,141 @@
 {
-	"name": "proto-lsp-sample",
-	"description": "A proto language server example",
-	"author": "Latebound",
+	"name": "tron",
+	"description": "LSP based support for TRON (aka Type Respecting Object Notation (aka  TRue ON))",
+	"publisher": "wxio",
+	"author": {
+		"name": "Late Bound Pty Ltd"
+	},
+	"categories": [
+		"Programming Languages",
+		"Other",
+		"Snippets",
+		"Linters",
+		"Formatters"
+	],
+	"keywords": [
+		"multi-root ready"
+	],
+	"galleryBanner": {
+		"color": "#CFB69A",
+		"theme": "light"
+	},
+	"private": true,
 	"license": "MIT",
 	"version": "1.0.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/wxio/tron-lsp"
 	},
-	"publisher": "vscode-samples",
-	"categories": [],
-	"keywords": [
-		"multi-root ready"
-	],
+	"scripts": {
+		"vscode:prepublish": "cd client && npm run update-vscode && cd .. && npm run compile",
+		"compile": "tsc -b",
+		"watch": "tsc -b -w",
+		"postinstall": "cd client && npm install && cd ../gosvr && go build && cd ..",
+		"test": "sh ./scripts/e2e.sh"
+	},
 	"engines": {
 		"vscode": "^1.26.0"
 	},
+	"extensionDependencies": [],
+	"dependencies": {},
+	"devDependencies": {
+		"@types/mocha": "^5.2.0",
+		"@types/node": "^8.0.0",
+		"tslint": "^5.16.0",
+		"typescript": "^3.5.1"
+	},
 	"activationEvents": [
-		"onLanguage:plaintext"
+		"onLanguage:plaintext",
+		"onLanguage:tron"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
+		"languages": [
+			{
+				"id": "tron",
+				"extensions": [
+					".tron"
+				],
+				"aliases": [
+					"TRON"
+				]
+			},
+			{
+				"id": "adl",
+				"extensions": [
+					".adl",
+					".adl-java",
+					".adl-hs",
+					".adl-cpp",
+					".adl-ts"
+				],
+				"aliases": [
+					"ADL"
+				]
+			},
+			{
+				"id": "tron.mod",
+				"extensions": [
+					"tron.mod"
+				],
+				"aliases": [
+					"Module File"
+				]
+			},
+			{
+				"id": "tron.sum",
+				"extensions": [
+					"tron.sum"
+				],
+				"aliases": [
+					"Module Checksum File"
+				]
+			}
+		],
+		"grammars": [
+			{
+				"language": "tron.mod",
+				"scopeName": "tron.mod",
+				"path": "./syntaxes/tron.mod.tmGrammar.json"
+			},
+			{
+				"language": "tron.sum",
+				"scopeName": "tron.sum",
+				"path": "./syntaxes/tron.sum.tmGrammar.json"
+			}
+		],
+		"configurationDefaults": {
+			"[tron]": {
+				"editor.insertSpaces": false,
+				"editor.formatOnSave": true,
+				"editor.codeActionsOnSave": {
+					"source.organizeImports": true
+				}
+			}
+		},
 		"configuration": {
 			"type": "object",
-			"title": "Example configuration",
+			"title": "Tron configuration",
 			"properties": {
-				"languageServerExample.maxNumberOfProblems": {
+				"tron.includes": {
+					"type": [
+						"array",
+						"null"
+					],
+					"items": {
+						"type": "string"
+					},
+					"default": null,
+					"description": "Include paths for stand and thirdparty libraries",
+					"scope": "resource"
+				},
+				"tron.maxIssues": {
 					"scope": "resource",
 					"type": "number",
 					"default": 100,
-					"description": "Controls the maximum number of problems produced by the server."
+					"description": "Controls the maximum number of issues reported."
 				},
-				"languageServerExample.trace.server": {
+				"tron.trace.server": {
 					"scope": "window",
 					"type": "string",
 					"enum": [
@@ -41,21 +145,74 @@
 					],
 					"default": "off",
 					"description": "Traces the communication between VS Code and the language server."
+				},
+				"tron.devFeatures": {
+					"type": "object",
+					"properties": {
+						"format": {
+							"type": "boolean",
+							"default": false,
+							"description": "If true, auto formating is done by the language server."
+						},
+						"autoComplete": {
+							"type": "boolean",
+							"default": false,
+							"description": "If true, the language server will provide code completion results."
+						}
+					},
+					"default": {
+						"format": true,
+						"autoComplete": true
+					},
+					"description": "Use this setting to enable/disable development features from the language server."
 				}
 			}
+		},
+		"commands": [
+			{
+				"command": "tron.includes",
+				"title": "Tron: Set 'tron.includes' setting",
+				"description": "Goto workspace setting file to edit includes option"
+			},
+			{
+				"command": "tron.browse",
+				"title": "Tron: Launch browser to view current file",
+				"description": "Launch browser to view current file"
+			},
+			{
+				"command": "tron.compile",
+				"title": "Tron: Compile the current file to ...",
+				"description": "Compile the current file to ..."
+			},
+			{
+				"command": "tron.show.commands",
+				"title": "Tron: Show All Commands...",
+				"description": "Shows all commands from the Tron extension in the quick pick"
+			},
+			{
+				"command": "tron.languageserver.restart",
+				"title": "Tron: Restart Language Server",
+				"description": "Restart the running instance of the language server"
+			}
+		],
+		"menus": {
+			"editor/context": [
+				{
+					"when": "editorTextFocus && resourceLangId == go",
+					"command": "tron.includes",
+					"group": "Tron group 1"
+				},
+				{
+					"when": "editorTextFocus && resourceLangId == go",
+					"command": "tron.browse",
+					"group": "Tron group 1"
+				},
+				{
+					"when": "editorTextFocus && resourceLangId == go",
+					"command": "tron.show.commands",
+					"group": "Tron group 2"
+				}
+			]
 		}
-	},
-	"scripts": {
-		"vscode:prepublish": "cd client && npm run update-vscode && cd .. && npm run compile",
-		"compile": "tsc -b",
-		"watch": "tsc -b -w",
-		"postinstall": "cd client && npm install && cd ../gosvr && go build && cd ..",
-		"test": "sh ./scripts/e2e.sh"
-	},
-	"devDependencies": {
-		"@types/mocha": "^5.2.0",
-		"@types/node": "^8.0.0",
-		"tslint": "^5.16.0",
-		"typescript": "^3.5.1"
 	}
 }
